sna: Clear old cursors when resizing

When changing the stride on a cursor, we have to clear the whole area
and not just the rectangle outside of our overwritten area.

Reported-by: Jan Alexander Steffens <jan.steffens@gmail.com>
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=82273
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>